--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="{{ "/css/webicons.css" | prepend: site.baseurl }}">
-  <link rel="icon" type="image/jpeg" href="/img/icon.jpeg">
+  <link rel="icon" type="image/jpeg" href="{{ "/img/icon.jpeg" | prepend: site.baseurl }}">
   <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-<script src="/js/modernizr.js"></script>
+<script src="{{ "/js/modernizr.js" | prepend: site.baseurl }}"></script>
 </head>
