--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ site.github.url }}/css/main.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="stylesheet" href="{{ site.github.url }}/css/webicons.css">
-  <link rel="icon" type="image/jpeg" href="{{ site.github.url }}/img/icon.jpeg">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/webicons.css">
+  <link rel="icon" type="image/jpeg" href="{{ site.baseurl }}/img/icon.jpeg">
   <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <script src="{{ "/js/modernizr.js" | prepend: site.baseurl }}"></script>
