going nuts over here

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/webicons.css">
-  <link rel="icon" type="image/jpeg" href="{{ site.baseurl }}/img/icon.jpeg">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/icon.png">
   <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <script src="{{ "/js/modernizr.js" | prepend: site.baseurl }}"></script>
