--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,27 @@
 
     {% include nav.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div class="content-box">
+      
         {{ content }}
-      </div>
+      
     </div>
 
-    {% include footer.html %}
-  </body>
+	<div class="footer-section row division">
+	    <span>Tell your friends about Lego for the Blind</span>
+	   <!--  <a class="webicon facebook" href="http://www.facebook.com/share.php?u={{site.url}}&title={{site.title}}">Share on Facebook</a>
+  		<a class="webicon twitter" href="http://twitter.com/home?status={{site.title}}+{{site.url}}">Tweet</a> -->
+  		<div class="footer-logos">
+  		<a class="facebook" href="http://www.facebook.com/share.php?u={{site.url}}&title={{site.title}}"><button>Share on Facebook</button></a>
+  		<a class="twitter" href="http://twitter.com/home?status={{site.title}}+{{site.url}}"><button>Tweet</button></a>
+  		</div>
+	</div>
 
+	<div class="footer-section row">
+	    <p>Lego for the Blind is created by <a href="">Matthew Shifrin</a>.
+	    <br>Website by <a href="">Kevin Ma</a>.</p>
+	</div>
+
+</body>
+  
 </html>
