--- a/_layouts/instructions.html
+++ b/_layouts/instructions.html
@@ -2,16 +2,25 @@
 layout: default
 ---
 <div class="content-section">
-  
-  <h4 class="post-title" itemprop="name headline">{{ page.title }}</h4>
-  	{{page.description}}
 
-  <div class="mini-section">
-    {% for file in page.filenames %}
-    <a href="/docs/{{file}}">  
-      <h4>Download Link{% if page.filenames.size > 1 %}s{% endif %}</h4>
-    </a>
-    {% endfor %}
-  	<a href="{{page.link}}"><h4>More Information</h4></a><br>
+<div class="row mini-section">
+  <div class="col-md-12 section-title">
+      <h4>{{ page.title }}</h4>
+    </div>
   </div>
+  
+  <div class="mini-section row">
+    <div class="col-md-6 ">
+      {{page.description}}
+    </div>
+     <div class="col-md-6 ">
+      {% for file in page.filenames %}
+      <a href="/docs/{{file}}">  
+        <h4>Download Instructions{% if page.filenames.size > 1 %}s{% endif %}</h4>
+      </a>
+      {% endfor %}
+    	<a href="{{page.link}}"><h4>Lego.com Link</h4></a><br>
+    </div>
+  </div>
+  
 </div>
