visual and organizational redesign of site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       
     </div>
 
-	<div class="footer-section row division">
+	<div class="footer-section row division " id="foot">
 	    <span>Tell your friends about Lego for the Blind</span>
 	  
   		<div class="footer-buttons share-buttons">
