--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
   <nav class="nav-contain">
     <div class="navigation">
     {% for my_page in site.pages %}
-      {% if my_page.title and my_page.title != "home" %}
+      {% if my_page.title and my_page.title != "home" and my_page.title != "sorting"%}
       <li><a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
       {% endif %}
     {% endfor %}
