--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -246,6 +246,10 @@ button:focus {outline:0;}
 
 //.............................GENERAL.................................
 
+.caption {
+	margin-top: 100px;
+}
+
 .content-box {
 	max-width: 700px;
     margin: 0 auto 0 auto;
@@ -254,6 +258,10 @@ button:focus {outline:0;}
 
 .content-section {
 	padding: 60px;
+}
+
+.content-section-small {
+	padding: 30px 60px;
 }
 
 .mini-section {
@@ -321,6 +329,22 @@ button:focus {outline:0;}
 	border: none;
 }
 
+.emailfixed {
+
+	position: fixed;
+	bottom: 0;
+	width: 700px;
+	background: white;
+	padding: 30px 60px;
+	border-top: 1px solid $background-color;
+
+}
+
+.emailnormal {
+	position: relative;
+	border: none;
+}
+
 //...........................Press...............................
 
 .press-image-container {
@@ -343,7 +367,7 @@ button:focus {outline:0;}
   left: 0;
   right: 0;
   height: 230px;
-  width: 100%;
+  width: 101%;
   opacity: 0.8;
   transition: .2s ease;
 }
@@ -353,19 +377,20 @@ button:focus {outline:0;}
 }
 
 .yellow-background {
-	background-color: $yellow;
+	background-color: $blue;
 }
 
 .red-background {
-	background-color: $red;
+	background-color: $blue;
 }
 
 .press-image-container:hover .press-overlay {
   opacity: 1;
+  background-color: white;
 }
 
 .press-text {
-  color: white;
+  color: black;
   font-size: 20px;
   position: absolute;
   top: 50%;
@@ -373,6 +398,7 @@ button:focus {outline:0;}
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   opacity: 0;
+  transition: .1s ease;
 }
 
 .press-image-container:hover .press-text {
