Fix email typo and broken link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,20 +8,20 @@
     {% include nav.html %}
 
     <div class="content-box">
-      
+
         {{ content }}
-      
+
     </div>
 
 	<div class="footer-section row division " id="foot">
 	    <span>Tell your friends about Lego for the Blind</span>
-	  
+
   		<div class="footer-buttons share-buttons">
   		<a class="facebook" href="http://www.facebook.com/share.php?u={{site.url}}&title={{site.title}}"><button class="blue">Share on Facebook</button></a>
   		<a class="twitter" href="http://twitter.com/home?status={{site.title}}+{{site.url}}"><button>Tweet</button></a>
   		</div>
 
-      
+
 	</div>
 
 	<div class="footer-section row">
@@ -29,10 +29,9 @@
 	    <br>Website by <a href="http://kevinyma.github.io">Kevin Ma</a>.</span>
 
       <div class="footer-buttons questions-buttons">
-        <a class="facebook" href="mailto:mattshifrin@aol.com"><button>Questions?</button></a>
+        <a class="facebook" href="mailto:matshifrin@aol.com"><button>Questions?</button></a>
       </div>
 	</div>
 
 </body>
-  
 </html>
